--- a/.github/workflows/Cppcheck analysis.yml
+++ b/.github/workflows/Cppcheck analysis.yml
@@ -1,5 +1,3 @@
-name: Build-Linux CI
-
 on:
   push:
     branches: [ main ]
@@ -12,4 +10,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
+    - name: Install-Cppcheck
+      run: sudo apt-get install cppcheck
+    - name: Analyse
+      run: cppcheck --enable=all 3_Implementation
