--- a/.github/workflows/Cppcheck analysis.yml
+++ b/.github/workflows/Cppcheck analysis.yml
@@ -14,4 +14,4 @@ jobs:
     - name: Install-Cppcheck
       run: sudo apt-get install cppcheck
     - name: Analyse
-      run: cppcheck --enable=all 3_Implementation
+      run: cppcheck --enable=all 
